[package]
name = "helius-rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
delegate = "0.9.0"
semver = "=1.0.10"
serde = "1.0.81"
serde_json = "1.0.81"
solana-account-decoder = "=1.14.13"
solana-client = "=1.14.13"
solana-program = "=1.14.13"
solana-sdk = "=1.14.13"
solana-transaction-status = "=1.14.13"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }